@@ -11,6 +11,10 @@ Mejorado ZX Vision:
 - Agregado nuevo Menú Superior (no habilitado por defecto)
 - Agregada opción para añadir un contorno a los iconos
 
+Mejorado ZX Desktop:
+- Permitir definir valores pequeños para el ancho del ZX Desktop
+- Agregar opción para prohibir activar ZX Desktop
+
 Mejorado edición de joystick a eventos/teclas (permitir desasignar fácilmente)
 Mejorado ZX Life: permitir acelerar juego, corregir comportamiento en límites del tablero
 Mejorado icono de Papelera
