@@ -79,7 +79,6 @@ que todo el que lo consulte lo haga por funcion, y esa funcion lo mire de un set
 asi se podria permitir, o no, que sdl u otros drivers puedan extender el destktop o no
 y en sdl habria que quitar el desactivado cuando se usa force tamaño
 
-ok-minimo de zx desktop permitido en ancho y alto: 0
 
 -parametros recomendados para fiwixos: con zx desktop? con ancho 64 cuando modo 320x200
 y opcion de no mostrar botones para extender zx desktop
