@@ -11,6 +11,10 @@ Improved ZX Vision:
 - Added new Top Menu (not enabled by default)
 - Added setting to add a stroke on icons
 
+Improved ZX Desktop:
+- Allow to set small values for ZX Desktop width size
+- Add setting to disallow enabling ZX Desktop
+
 Improved editing joystick to events/keys (allow to unasign easily)
 Improved ZX Life: allow to speed up game, fix behaviour on board limits
 Improved Trash icon
